examples/test/testpolicy19613.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19613
  namespace: namespace75
spec:
  podSelector:
    matchLabels:
      key29: value14
      key49: value11
      key41: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value11
          key5: value19
      podSelector:
        matchLabels:
          key43: value14
          key40: value12
          key8: value44
